# semi-fixed-tick-gd-extension

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SEMI_FIXED_PLUGIN_SPEC.md  icon.svg.import  project.godot  root.tscn  test_shape.gd  test_shape.gd.uid  test_shape.tscn
addons/semi_fixed_tick/: CMakeLists.txt  Cargo.toml  semi_fixed_tick.gdextension  semi_fixed_tick.gdextension.uid  semi_fixed_tick_rust.gdextension.uid
addons/semi_fixed_tick/docs/: quick_start.md
addons/semi_fixed_tick/src/: extension_entry.cpp  lib.rs  register_types.cpp  register_types.h  semi_fixed_step_service.cpp  semi_fixed_step_service.h  sft_interpolation_store.cpp  sft_interpolation_store.h  sft_runtime_config.cpp  sft_runtime_config.h  sft_stepper.cpp  sft_stepper.h
scripts/: configure-gcc-preset.ps1  run-godot-project.ps1  sync-rust-addon-binaries.ps1
